hello-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hello-web
  name: hello-web
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-web
    spec:
      containers:
      - image: gcr.io/onehq-192515/hello-app:v1
        imagePullPolicy: IfNotPresent
        name: hello-web
        ports:
        - containerPort: 8080
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
