hello-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: hello-web
  name: hello-web
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-web
  sessionAffinity: None
  type: LoadBalancer
