hello-web-all.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: hello-web
  name: hello-web
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-web
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hello-web
  name: hello-web
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-web
    spec:
      containers:
      - image: gcr.io/onehq-192515/hello-app:v1
        imagePullPolicy: IfNotPresent
        name: hello-web
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: first-cluster-hello-web-ip
spec:
  backend:
    serviceName: hello-web
    servicePort: 80
