hello-web-ingress.yaml
apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:  
    name: hello-ingress
    namespace: default  
    annotations: kubernetes.io/ingress.global-static-ip-name: first-cluster-hello-web-ip
spec:  
    backend:
      serviceName: hello-web    
      servicePort: 80
